button safari fix

--- a/dev/less/styles.less
+++ b/dev/less/styles.less
@@ -355,10 +355,12 @@ h2,
 }
 
 .tip-button {
+  display: block;
+  text-align: center;
   width: 36px;
   height: 36px;
   font-size: 2.2rem;
-  line-height: 2.4rem;
+  line-height: 33px;
   color: @white;
   background: transparent;
   border: 2px solid #B8B8B8;
